# Todoapp

./: .replit  README.md  db.sqlite3  pyproject.toml
baseapp/: admin.py  forms.py  models.py  urls.py  views.py
baseapp/migrations/: 0001_initial.py  0002_element_content_element_title.py  0003_element_author.py  0004_alter_element_author.py  0005_alter_element_author.py  0006_element_done.py
baseapp/static/: main.css
baseapp/templates/: addElement.html  base.html  footer.html  home.html  nav.html
todoapp/: settings.py  urls.py
users/: forms.py  urls.py  views.py
users/static/: user.css
users/templates/: dashboard.html  login.html  register.html
