[tool.poetry]
name = "repl_nix_Todoapp"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
numpy = "^1.24.2"
lockfile = "^0.12.2"
attr = "^0.3.2"
Jinja2 = "^3.1.2"
hid-converge-ngs = "^2.0.1"
Pillow = "^9.4.0"
xds-protos = "^0.0.11"
pyOpenSSL = "^23.0.0"
keyring = "^23.13.1"
python-ctags3 = "^1.5.0"
python-ntlm = "^1.1.0"
cryptography = "^39.0.1"
Sphinx = "^6.1.3"
tornado = "^6.2"
ipython = "^8.10.0"
httpsproxy_urllib2 = "^1.0"
spark-nlp = "^4.3.0"
Cython = "^0.29.33"
railroad = "^0.5.0"
ipywidgets = "^8.0.4"
docutils = "^0.19"
pyjnius = "^1.4.2"
HTMLParser = "^0.0.2"
nfv-manager = "^1.3.3"
noaodatalab = "^2.20.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
